--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
-.App {
+h1 {
   text-align: center;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-slidein 3s linear 1s;
   }
 }
 
@@ -24,15 +25,71 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes App-logo-slidein {
+  from {
+    margin-right: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+  }
+  0% {
+    transform:translateY(-100%);
+    opacity: 0;
+  }
+  5% {
+      transform:translateY(-100%);
+      opacity: 0;
+  }
+  15% {
+    transform:translateY(0);
+    padding-bottom: 5px;
+  }
+  30% {
+    transform:translateY(-50%);
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:link {
+  background-color: #4fc3f7;
+  color: #272727ff;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 12px;
+  font-size: 14px;
 }
+
+a:hover {
+  background-color:#0a99db;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: bounce;
+}
+
+@keyframes bounce {
+50% { transform: translateY(5px); }
+}
+
+.App-image {
+  background-color: #4fc3f7;
+  color: #272727ff;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 12px;
+  font-size: 14px;
+}
+
+.App-image:hover {
+  background-color:#0a99db;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: bounce;
+}
+
+@keyframes bounce {
+50% { transform: translateY(5px); }
+} */
